--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alireza Jalali</title>
     <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 <body>
@@ -33,7 +34,7 @@
                 <br>
                 <strong>Alireza Jalali</strong>
                 <br>
-                <span>A Frontend Developer</span>
+                <span>A Front-End Developer</span>
             </h2>
             <br>
             <a href="" class="primary-btn">Hire Me</a>
@@ -61,6 +62,7 @@
     <!-- end content section -->
     <!-- start footer section -->
     <footer class="container footer-section">
+        <p><a href="#"><ion-icon name="chevron-up-outline"></ion-icon></a></p>
         <p>Copyright &copy; 2023 Alireza Jalali. All rights reserved.</p>
     </footer>
     <!-- end footer section -->
@@ -69,6 +71,7 @@
         <script src="assets/js/main.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </section>
     <!-- end script section -->
 </body>
