--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
-<body>
+<body class="" id="darkmode">
     <!-- start navbar section -->
     <section class="container-fluid navbar-section">
         <div class="container">
@@ -16,13 +16,14 @@
                 <img src="assets/images/me.jpg" alt="Alireza-Jalali">
                 <h1>&lt;&sol;Alireza Jalali &gt;</h1>
             </div>
+            <a onclick="darkMode();"><ion-icon name="sunny-outline"></ion-icon></a>
             <nav class="nav" id="main-nav">
                 <a href="">Home</a>
                 <a href="">Resume</a>
                 <a href="">Projects</a>
                 <a href="">About</a>
                 <a href="">Contact</a>
-                <a href="javascript:void(0);" class="menu-icon" onclick="myFunction();"><ion-icon name="menu-outline"></ion-icon></a>
+                <a href="javascript:void(0);" class="menu-icon" onclick="Menu();"><ion-icon name="menu-outline"></ion-icon></a>
             </nav>
         </div>
     </section>
@@ -53,16 +54,18 @@
         </section>
         <section class="social">
             <ul>
-                <li><a href=""><ion-icon name="logo-whatsapp"></ion-icon>WhatsApp</a></li>
-                <li><a href=""><ion-icon name="logo-linkedin"></ion-icon>Linkedin</a></li>
-                <li><a href=""><ion-icon name="logo-github"></ion-icon>GitHub</a></li>
+                <li><a href="https://instagram.com/alireza.develop"><ion-icon name="logo-instagram"></ion-icon>Instagram</a></li>
+                <li><a href="https://linkedin.com/in/alireza-develop"><ion-icon name="logo-linkedin"></ion-icon>Linkedin</a></li>
+                <li><a href="https://github.com/Alireza-Jalali"><ion-icon name="logo-github"></ion-icon>GitHub</a></li>
             </ul>
         </section>
     </section>
     <!-- end content section -->
     <!-- start footer section -->
     <footer class="container footer-section">
-        <p><a href="#"><ion-icon name="chevron-up-outline"></ion-icon></a></p>
+        <progress value="50" max="100"></progress>
+        <p class="develop">Developing...</p>
+        <p><a href="#" class="top"><ion-icon name="chevron-up-outline"></ion-icon></a></p>
         <p>Copyright &copy; 2023 Alireza Jalali. All rights reserved.</p>
     </footer>
     <!-- end footer section -->
