--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <span>A Front-End Developer</span>
             </h2>
             <br>
-            <a href="" class="primary-btn">Hire Me</a>
-            <a href="" class="secondary-btn">Let's Talk</a>
+            <a href="https://telegram.me/AlirezaDevelop" class="primary-btn">Hire Me</a>
+            <a href="https://telegram.me/AlirezaDevelop" class="secondary-btn">Let's Talk</a>
         </header>
         <img src="assets/images/me.jpg" alt="Alireza-Jalali">
     </section>
