--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="">Home</a>
                 <a href="">Resume</a>
                 <a href="">Projects</a>
-                <a href="">About</a>
+                <a href="#about">About</a>
                 <a href="">Contact</a>
                 <a href="javascript:void(0);" class="menu-icon" onclick="Menu();"><ion-icon name="menu-outline"></ion-icon></a>
             </nav>
@@ -46,13 +46,14 @@
     <!-- end header section -->
     <!-- start content section -->
     <section class="container content-section">
-        <section class="about">
+        <section class="about" id="about">
             <h3>About me</h3>
             <span>A young front-end developer who tries to do great things...</span>
             <br>
             <p>I'm very interested in front-end development and learning it more. I enjoy working with front-end development languages and frameworks. I'm currently fluent in HTML, CSS, Responsive Design, Flexbox, CSS Grid, JavaScript and Git. I have big goals and I want to implement my ideas and make a change in the world. I also want to gain honor for my country (Afghanistan). I'm currently looking for an internship in Tehran.</p>
         </section>
         <section class="social">
+            <p>You can find me here</p>
             <ul>
                 <li><a href="https://instagram.com/alireza.develop"><ion-icon name="logo-instagram"></ion-icon>Instagram</a></li>
                 <li><a href="https://linkedin.com/in/alireza-develop"><ion-icon name="logo-linkedin"></ion-icon>Linkedin</a></li>
