--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             <h3>About me</h3>
             <span>A young front-end developer who tries to do great things...</span>
             <br>
-            <p>I'm very interested in front-end development and learning it more. I enjoy working with front-end development languages and frameworks. I'm currently fluent in HTML, CSS, Responsive Design, Flexbox, CSS Grid, JavaScript and Git. I have big goals and I want to implement my ideas and make a change in the world. I also want to gain honor for my country (Afghanistan). I'm currently looking for an internship in Tehran.</p>
+            <p>I'm very interested in front-end development and learning it more. I enjoy working with front-end development languages and frameworks. I'm currently fluent in HTML, CSS, Responsive Design, Flexbox, CSS Grid, JavaScript and Git. I have big goals and I want to implement my ideas and make a change in the world.<br> I'm currently looking for an internship in Tehran.</p>
         </section>
         <section class="social">
             <p>You can find me here</p>
             <ul>
-                <li><a href="https://instagram.com/alireza.develop"><ion-icon name="logo-instagram"></ion-icon>Instagram</a></li>
-                <li><a href="https://linkedin.com/in/alireza-develop"><ion-icon name="logo-linkedin"></ion-icon>Linkedin</a></li>
+                <li><a href="https://linkedin.com/in/alirezadevelop"><ion-icon name="logo-linkedin"></ion-icon>Linkedin</a></li>
                 <li><a href="https://github.com/Alireza-Jalali"><ion-icon name="logo-github"></ion-icon>GitHub</a></li>
+                <li><a href="https://youtube.com/@alirezadevelop"><ion-icon name="logo-youtube"></ion-icon>YouTube</a></li>
             </ul>
         </section>
     </section>
