--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     <section class="container content-section">
         <section class="about" id="about">
             <h3>About me</h3>
-            <span>A young front-end developer who tries to do great things...</span>
+            <span>Hello there! 👋 </span>
             <br>
-            <p>I'm very interested in front-end development and learning it more. I enjoy working with front-end development languages and frameworks. I'm currently fluent in HTML, CSS, Responsive Design, Flexbox, CSS Grid, JavaScript and Git. I have big goals and I want to implement my ideas and make a change in the world.<br> I'm currently looking for an internship in Tehran.</p>
+            <p>I'm Alireza Jalali, a motivated frontend developer who tries to do great things...<br>My background is in frontend development where I try to develop user-friendly user interfaces.<br> I love teamwork and I enjoy working with programming teams to turn ideas into reality.<br> I'm constantly honing my skills, staying up-to-date with the latest technologies and trends, and seeking out opportunities for personal and professional growth.<br> Let's connect and collaborate on exciting projects!</p>
         </section>
         <section class="social">
             <p>You can find me here</p>
@@ -67,7 +67,7 @@
         <progress value="50" max="100"></progress>
         <p class="develop">Developing...</p>
         <p><a href="#" class="top"><ion-icon name="chevron-up-outline"></ion-icon></a></p>
-        <p>Copyright &copy; 2023 Alireza Jalali. All rights reserved.</p>
+        <p>Copyright &copy; 2024 Alireza Jalali. All rights reserved.</p>
     </footer>
     <!-- end footer section -->
     <!-- start script section -->
